--- a/Polynom.html
+++ b/Polynom.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="banner">
-    <a href ="Index.html">
+    <a href ="index.html">
     <img src="BannerGymSite.png" alt="Banner picture"id="banner">
     </a>
   </div>
