--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="banner">
-  <a href ="Index.html">
+  <a href ="index.html">
   <img src="BannerGymSite.png" alt="Banner picture" id="banner">
 </a>
 </div>
